<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemConfiguracoes"
            android:icon="@drawable/configuracoes_icone"
            android:title="@string/item_configurações" />
        <item
            android:id="@+id/itemCompartilhar"
            android:icon="@drawable/compartilhar_icone"
            android:title="@string/item_compartilhar" />
        <item
            android:id="@+id/itemAvaliar"
            android:icon="@drawable/avaliar_app_icone"
            android:title="@string/item_avaliar" />
        <item
            android:id="@+id/itemSobre"
            android:icon="@drawable/sobre_icone"
            android:title="@string/item_sobre" />
        <item
            android:id="@+id/itemSair"
            android:icon="@drawable/sair_icone"
            android:title="@string/item_sair" />
    </group>
</menu>
